--- a/src/app/geovisor/components/navbar/navbar.component.html
+++ b/src/app/geovisor/components/navbar/navbar.component.html
@@ -16,11 +16,12 @@
     </div>
   </div>
   <!-- Título centrado -->
-  <div
-    class="hidden md:block absolute left-1/2 transform -translate-x-1/2 select-none text-white text-3xl font-bold drop-shadow-md tracking-normal"
-    style="font-family: 'Roboto', sans-serif; text-shadow: 1px 1px 2px rgba(100, 100, 100, 0.7);">
-              SUB DIRECCIÓN DE MONITOREO
+  <div class="hidden lg:block text-center text-3xl font-bold"
+    style="font-family: 'Roboto', sans-serif; text-shadow: 1px 1px 2px rgba(100, 100, 100, 0.7); color: white;">
+    SUB DIRECCIÓN DE MONITOREO
   </div>
+
+
   <!-- Contenedor derecho (search + logout) -->
   <div class="flex items-center gap-1">
     <!-- Contenedor del widget con estilo, sin interferir en su DOM interno -->
