--- a/src/app/geovisor/pages/metadata/metadata.component.html
+++ b/src/app/geovisor/pages/metadata/metadata.component.html
@@ -12,7 +12,7 @@
         <p class="text-lg text-gray-600 mt-4">Estamos trabajando para brindarte una mejor experiencia.</p>
         <p class="text-gray-500 mt-2">¡Vuelve pronto!</p>
         <div class="mt-6">
-            <a href="#" class="px-4 py-2 bg-blue-600 text-white rounded-lg shadow-md hover:bg-blue-700">Volver al inicio</a>
+            <a href="/" class="px-4 py-2 bg-blue-600 text-white rounded-lg shadow-md hover:bg-blue-700">Volver al inicio</a>
         </div>
     </div>
 </body>
