--- a/src/app/geovisor/pages/map/map.component.html
+++ b/src/app/geovisor/pages/map/map.component.html
@@ -6,7 +6,7 @@
   <!-- Bloque de usuario en esquina inferior izquierda -->
   <div
   *ngIf="usuario"
-  class="hidden lg:flex absolute bottom-4 left-[100px] z-50 bg-primary bg-opacity-95 p-3 rounded-lg shadow-md items-center gap-3 text-sm print:hidden"
+  class="hidden lg:flex absolute bottom-4 left-[100px] z-50 bg-[#323232] bg-opacity-95 p-3 rounded-lg shadow-md items-center gap-3 text-sm print:hidden"
 >
   <img
     [src]="usuario.foto"
