--- a/src/app/geovisor/pages/dashboard/dashboard.component.html
+++ b/src/app/geovisor/pages/dashboard/dashboard.component.html
@@ -28,5 +28,22 @@
         </div>
       </div>
     </div>
+    <div class="flex-1 overflow-y-auto px-2 mt-2">
+      <div class="p-4 space-y-6">
+        <!-- 📦 Total de registros -->
+        <div class="bg-white rounded-2xl shadow-md border p-4 w-fit mx-auto text-center">
+          <h2 class="text-lg font-semibold text-gray-800 mb-4">
+            Total de Cultivos
+          </h2>
+          <p class="text-4xl font-bold text-green-600">
+            {{ totalRegistrosCultivos }}
+          </p>
+        </div>
+        <!-- 📈 Gráficos -->
+        <div class="bg-white rounded-2xl shadow-md border p-4 w-fit mx-auto">
+          <canvas id="graficoCultivoTipo" class="max-w-xl mx-auto my-4"></canvas>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
