Total de cultivos

--- a/src/app/geovisor/pages/dashboard/dashboard.component.html
+++ b/src/app/geovisor/pages/dashboard/dashboard.component.html
@@ -46,6 +46,13 @@
           Total: {{ totalRegistrosPorDepartamento }}
         </p>
         <canvas id="graficoCultivoDepartamento" class="w-full max-h-[600px]"></canvas>
+        <br>
+        <h2 class="text-lg font-semibold text-gray-800 mb-4 text-center">
+          Registros por Año y mes
+        </h2>
+        <p class="text-sm text-center mb-4 text-gray-600">
+          Total: {{ totalRegistrosPorDepartamento }}
+        </p>
         <canvas id="graficoPorFecha" class="max-w-4xl mx-auto my-4"></canvas>
 
       </div>
