Solucion de Capas - Solucionando

--- a/src/app/auth/pages/welcome/welcome.component.html
+++ b/src/app/auth/pages/welcome/welcome.component.html
@@ -34,7 +34,7 @@
         class="w-12 h-12 md:w-16 md:h-16"
       />
       <span class="hover:text-[#0D9BD7] transition-colors duration-300"
-        >GEOPORTAL</span
+        >GeoVisor</span
       >
     </h1>
 
