--- a/src/app/auth/pages/welcome/welcome.component.scss
+++ b/src/app/auth/pages/welcome/welcome.component.scss
@@ -1,22 +1,17 @@
 @keyframes zoomInOut {
-  100% {
+  0%, 100% {
     transform: scale(1);
   }
-  75% {
-    transform: scale(2);
+  25%, 75% {
+    transform: scale(1.2);
   }
   50% {
-    transform: scale(3);
-  }
-  25% {
-    transform: scale(4);
-  }
-  0% {
-    transform: scale(5);
+    transform: scale(1.4);
   }
 }
 .animate-zoom {
-  animation: zoomInOut 10s ease-in-out infinite;
+  animation: zoomInOut 20s ease-in-out infinite;
+  transform-origin: center center;
 }
 
 @keyframes backgroundChange {
@@ -37,5 +32,5 @@
   }
 }
 .animate-background {
-  animation: backgroundChange 10s infinite;
+  animation: backgroundChange 10s ease-in-out infinite;
 }
