Mejoro el boton de cierre de sesion

--- a/src/app/auth/pages/login/login.component.html
+++ b/src/app/auth/pages/login/login.component.html
@@ -61,7 +61,7 @@
         <!-- Registro -->
         <p class="text-center text-sm text-gray-300">
           ¿Aún no tienes una cuenta?
-          <a [routerLink]="['auth/welcome']" class="font-medium text-primary-400 hover:underline">
+          <a [routerLink]="['auth/register']" class="font-medium text-primary-400 hover:underline">
             Crear una cuenta
           </a>
         </p>
