Cambio de titulo en el NavBar

--- a/src/app/geovisor/components/navbar/navbar.component.html
+++ b/src/app/geovisor/components/navbar/navbar.component.html
@@ -31,7 +31,7 @@
       color: white;
     "
   >
-    SUB DIRECCIÓN DE MONITOREO
+    GeoVISOR PIRDAIS
   </div>
 
   <!-- Contenedor derecho (search + logout) -->
